# OMNI-SENSE-Sensor-Abstraction-Physics-and-Fusion-Library

./: Cargo.toml  README.md
crates/omni-sense-core/src/: detection_event.rs  error.rs  frame.rs  health.rs  lib.rs  pose.rs  sensor_id.rs
crates/omni-sense-core/src/traits/: acoustic.rs  environmental.rs  event_sensor.rs  imu.rs  mod.rs  ranging.rs  velocity.rs
docs/: architecture.md  camera-policy.md  coordinate-frames.md  design-principles.md  fusion-algorithms.md  physics-references.md  porting-guide.md  time-sync.md
legal/: compliance.md
omni-sense-core/: Cargo.toml
omni-sense-core/src/: modality.rs  timestamp.rs
omni-sense-core/src/traits/: binary.rs  imaging.rs  sensor.r
