toml
[workspace]
resolver = "2"
members = [
    "crates/omni-sense-core",
    "crates/omni-sense-physics",
    "crates/omni-sense-atmospherics",
    "crates/omni-sense-frames",
    "crates/omni-sense-time",
    "crates/omni-sense-radar",
    "crates/omni-sense-lidar",
    "crates/omni-sense-event",
    "crates/omni-sense-acoustic",
    "crates/omni-sense-imu",
    "crates/omni-sense-fusion",
    "crates/omni-sense-replay",
    "crates/omni-sense-drivers-mmwave",
    "crates/omni-sense-drivers-lidar",
    "crates/omni-sense-drivers-event",
    "crates/omni-sense-drivers-acoustic",
    "crates/omni-sense-drivers-imu",
    "crates/omni-sense-drivers-pir",
    "crates/omni-sense-drivers-tof",
    "crates/omni-sense-drivers-env",
    "crates/omni-sense-drivers-camera",
    "crates/omni-sense-prelude",
]

[workspace.dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
rand = "0.8"
approx = "0.5"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1
